--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "node-cron": "^4.2.1",
     "resend": "^6.4.2",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6"
   }
 }
